// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform custom signalPrefix > should work with basic types 1`] = `
"import { signal as _signal$ } from "essor";
const __a = _signal$(false);
__a.value = 1;"
`;

exports[`transform custom signalPrefix > should work with basic types 2`] = `
"import { signal as _signal$ } from "essor";
const __a = _signal$(true);
__a.value = 1;"
`;

exports[`transform custom signalPrefix > should work with basic types 3`] = `
"import { signal as _signal$ } from "essor";
const __a = _signal$(0);
__a.value = 1;"
`;

exports[`transform custom signalPrefix > should work with basic types 4`] = `
"import { signal as _signal$ } from "essor";
const __a = _signal$(1);
__a.value = 1;"
`;

exports[`transform custom signalPrefix > should work with basic types 5`] = `
"import { signal as _signal$ } from "essor";
const __a = _signal$(1);
__a.value = 1;"
`;

exports[`transform custom signalPrefix > should work with basic types 6`] = `
"import { signal as _signal$ } from "essor";
const __a = _signal$(123);
__a.value = 1;"
`;

exports[`transform custom signalPrefix > should work with basic types 7`] = `
"import { signal as _signal$ } from "essor";
const __a = _signal$(null);
__a.value = 1;"
`;

exports[`transform custom signalPrefix > should work with basic types 8`] = `
"import { signal as _signal$ } from "essor";
const __a = _signal$(undefined);
__a.value = 1;"
`;

exports[`transform custom signalPrefix > should work with basic types 9`] = `
"import { signal as _signal$ } from "essor";
const __a = _signal$(NaN);
__a.value = 1;"
`;

exports[`transform symbol > should keep reactivity when destructuring a signal array 1`] = `
"import { signal as _signal$, computed as _computed$ } from "essor";
let $items = _signal$([1, 2, 3]);
const $first = _computed$(() => $items.value[0]),
  second = $items.value[1];
console.log($first.value, second);"
`;

exports[`transform symbol > should keep reactivity when destructuring a signal object 1`] = `
"import { signal as _signal$, computed as _computed$ } from "essor";
let $obj = _signal$({
  a: 1,
  b: 2
});
const $a = _computed$(() => $obj.value.a),
  b = $obj.value.b;
console.log($a.value, b);"
`;

exports[`transform symbol > should not transform signal used as arrow function parameter 1`] = `
"import { signal as _signal$ } from "essor";
let $a = _signal$(1);
const fn = $a => $a.value + 1;"
`;

exports[`transform symbol > should not work with add value symbol 1`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$([1]);
$a.value.push(2);"
`;

exports[`transform symbol > should snapshot plain destructuring of a signal (reads .value) 1`] = `
"import { signal as _signal$ } from "essor";
let $obj = _signal$({
  a: 1,
  b: 2
});
const a = $obj.value.a,
  b = $obj.value.b;
console.log(a, b);"
`;

exports[`transform symbol > should support aliased destructuring of a signal object 1`] = `
"import { signal as _signal$, computed as _computed$ } from "essor";
let $obj = _signal$({
  a: 1,
  b: 2
});
const $a = _computed$(() => $obj.value.a),
  b = $obj.value.b;
console.log($a.value, b);"
`;

exports[`transform symbol > should support default values and rest in signal destructuring 1`] = `
"import { signal as _signal$, computed as _computed$ } from "essor";
let $obj = _signal$({
  a: 1,
  b: 2,
  c: 3
});
const $a = _computed$(() => $obj.value.a === undefined ? 9 : $obj.value.a),
  {
    a: _omit$,
    ...rest
  } = $obj.value;
let $items = _signal$([1, 2, 3]);
const head = $items.value[0],
  $tail = _computed$(() => $items.value.slice(1));"
`;

exports[`transform symbol > should support nested destructuring of a signal object 1`] = `
"import { signal as _signal$, computed as _computed$ } from "essor";
let $obj = _signal$({
  n: {
    x: 1
  },
  m: 2
});
const $x = _computed$(() => $obj.value.n.x),
  z = $obj.value.n.z,
  m = $obj.value.m;
console.log($x.value, z, m);"
`;

exports[`transform symbol > should transform signal in arrow function expression body 1`] = `
"import { signal as _signal$ } from "essor";
let $todos = _signal$([]);
watch(() => $todos.value, val => {
  console.log(val);
});"
`;

exports[`transform symbol > should transform signal in arrow function expression body with deep option 1`] = `
"import { signal as _signal$ } from "essor";
let $todos = _signal$([]);
let $filter = _signal$('all');
watch(() => $todos.value, val => {
  localStorage.setItem('key', JSON.stringify(val));
}, {
  deep: true
});"
`;

exports[`transform symbol > should transform signal in nested arrow expression body 1`] = `
"import { signal as _signal$ } from "essor";
let $count = _signal$(0);
const getter = () => $count.value;"
`;

exports[`transform symbol > should work with array 1`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$([1, 2, 3]);
$a.value = 2;"
`;

exports[`transform symbol > should work with array 2`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$([1, {
  a: 1
}, 3, 4]);
$a.value = 2;"
`;

exports[`transform symbol > should work with array 3`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$([1, 2, 3, 4, 5]);
$a.value = 2;"
`;

exports[`transform symbol > should work with array index 1`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$([1]);
console.log($a.value[0]);"
`;

exports[`transform symbol > should work with basic types 1`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$(false);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 2`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$(true);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 3`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$(0);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 4`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$(1);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 5`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$(1);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 6`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$(123);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 7`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$(null);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 8`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$(undefined);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 9`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$(NaN);
$a.value = 1;"
`;

exports[`transform symbol > should work with const function transform computed 1`] = `
"import { computed as _computed$ } from "essor";
const $a = _computed$(() => 1);
$a.value = 2;"
`;

exports[`transform symbol > should work with const function transform computed 2`] = `
"import { computed as _computed$ } from "essor";
const $a = _computed$(a => a + 1);
$a.value = 2;"
`;

exports[`transform symbol > should work with import value 1`] = `
"import { $a } from 'a';
import { b } from 'b';
console.log($a.value, b);"
`;

exports[`transform symbol > should work with let function transform computed 1`] = `
"import { signal as _signal$ } from "essor";
let $a = _signal$(() => 1);
$a.value = 2;"
`;

exports[`transform symbol > should work with let function transform computed 2`] = `
"import { signal as _signal$ } from "essor";
let $a = _signal$(a => a + 1);
$a.value = 2;"
`;

exports[`transform symbol > should work with object 1`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$({
  a: 1
});
$a.value = 2;"
`;

exports[`transform symbol > should work with object 2`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$({
  a: 1
});"
`;

exports[`transform symbol > should work with object 3`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$({
  a: 1,
  b: 2
});
$a.value = 2;"
`;

exports[`transform symbol > should work with object 4`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$({
  a: 1,
  b: 2
});"
`;

exports[`transform symbol > should work with object 5`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$({
  a: 1,
  b: {
    c: 1
  }
});
$a.value = 2;"
`;

exports[`transform symbol > should work with object 6`] = `
"import { signal as _signal$ } from "essor";
const $a = _signal$({
  a: 1,
  b: {
    c: 1
  }
});"
`;

exports[`transform symbol > should work with object pattern 1`] = `
"import { signal as _signal$, computed as _computed$ } from "essor";
let $obj = _signal$({
  a: 1,
  b: 2
});
const $a = _computed$(() => $obj.value.a),
  b = $obj.value.b;
let $arr = _signal$([1, 2]);
const $c = _computed$(() => $arr.value[0]),
  d = $arr.value[1];
let $nested = _signal$([{
  d: 1,
  e: 2
}]);
const $d = _computed$(() => $nested.value[0].d),
  e = $nested.value[0].e;
console.log($a.value, b);
console.log($c.value, d);
console.log($d.value, e);"
`;

exports[`transform symbol > should work with object pattern alias 1`] = `
"import { signal as _signal$, computed as _computed$ } from "essor";
let $obj = _signal$({
  a: 1,
  b: 2
});
const $a = _computed$(() => $obj.value.a),
  b = $obj.value.b;
let $nested = _signal$([{
  d: 1,
  e: 2
}]);
const $d = _computed$(() => $nested.value[0].d);
console.log($a.value, b);
console.log($d.value);"
`;

exports[`transform symbol — array destructuring edge cases > skips holes in array patterns 1`] = `
"import { signal as _signal$, computed as _computed$ } from "essor";
let $arr = _signal$([1, 2, 3]);
const $b = _computed$(() => $arr.value[1]);
console.log($b.value);"
`;

exports[`transform symbol — array destructuring edge cases > supports default values in array destructuring targets 1`] = `
"import { signal as _signal$, computed as _computed$ } from "essor";
let $arr = _signal$([1]);
const $first = _computed$(() => $arr.value[0] === undefined ? 9 : $arr.value[0]),
  $second = _computed$(() => $arr.value[1] === undefined ? 8 : $arr.value[1]);
console.log($first.value, $second.value);"
`;

exports[`transform symbol — assignments & updates > rewrites compound assignment operators 1`] = `
"import { signal as _signal$ } from "essor";
let $x = _signal$(0);
$x.value += 1;
$x.value *= 2;"
`;

exports[`transform symbol — assignments & updates > rewrites prefix and postfix update expressions 1`] = `
"import { signal as _signal$ } from "essor";
let $x = _signal$(0);
$x.value++;
++$x.value;
$x.value--;
--$x.value;"
`;

exports[`transform symbol — binding contexts left untouched > does not mangle a rest parameter into invalid syntax 1`] = `
"function f(...$args) {
  return $args.value;
}"
`;

exports[`transform symbol — binding contexts left untouched > does not re-wrap an already-wrapped signal/computed call 1`] = `
"import { signal, computed } from 'essor';
const $a = signal(1);
const $b = computed(() => $a.value);"
`;

exports[`transform symbol — binding contexts left untouched > does not rewrite an export specifier local name 1`] = `
"import { signal as _signal$ } from "essor";
let $a = _signal$(1);
export { $a };"
`;

exports[`transform symbol — member access > does not double-wrap an explicit .value read 1`] = `
"import { signal as _signal$ } from "essor";
let $count = _signal$(0);
console.log($count.value);"
`;

exports[`transform symbol — member access > does not double-wrap an explicit optional .value read 1`] = `
"import { signal as _signal$ } from "essor";
let $maybe = _signal$(null);
console.log($maybe?.value);"
`;

exports[`transform symbol — member access > does not rewrite a signal used as a static member key 1`] = `
"import { signal as _signal$ } from "essor";
let $key = _signal$(1);
const obj = {
  $key: 5
};
console.log(obj.$key);"
`;

exports[`transform symbol — member access > rewrites a signal used as a computed member key 1`] = `
"import { signal as _signal$ } from "essor";
let $key = _signal$('a');
const obj = {
  a: 1
};
console.log(obj[$key.value]);"
`;

exports[`transform symbol — member access > rewrites a signal used as a computed object-literal key 1`] = `
"import { signal as _signal$ } from "essor";
let $k = _signal$('x');
const o = {
  [$k.value]: 1
};"
`;

exports[`transform symbol — member access > rewrites both object and computed-key positions when nested 1`] = `
"import { signal as _signal$ } from "essor";
let $arr = _signal$([10, 20]);
let $i = _signal$(0);
console.log($arr.value[$i.value]);"
`;

exports[`transform symbol — member access > rewrites the object of a member assignment, not the assignment itself 1`] = `
"import { signal as _signal$ } from "essor";
let $obj = _signal$({
  a: 1
});
$obj.value.a = 2;"
`;
